[package]
name = "bar-app"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-graphics = { workspace = true }
rmox-common = { path = "../rmox-common" }
rmox-fb = { path = "../rmox-fb" }
rmox-input = { path = "../rmox-input" }
rmox-protocol = { path = "../rmox-protocol" }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time", "signal"] }
tokio-stream = { version = "0.1", default-features = false }
tracing = { workspace = true }
tracing-subscriber = "0.3"
