[package]
name = "term-app"
version = "0.1.0"
edition = "2021"

[dependencies]
alacritty_terminal = { version = "0.21", default-features = false }
embedded-graphics = { workspace = true }
rmox-common = { path = "../rmox-common" }
rmox-fb = { path = "../rmox-fb" }
rmox-input = { path = "../rmox-input" }
rmox-protocol = { path = "../rmox-protocol" }
time = "0.3"
tokio = { version = "1", features = ["macros", "rt", "time", "signal"] }
tokio-stream = { version = "0.1", default-features = false }
tracing = { workspace = true }
tracing-subscriber = "0.3"
